add django badge

--- a/phystech/templates/base.html
+++ b/phystech/templates/base.html
@@ -29,9 +29,10 @@
 <div class="container">
     {% block content %}{% endblock %}
 </div>
-<footer>
+<footer style="position: absolute; left: 0px; bottom: 0px; width: 100%;">
 <p>&copy; Зинов Николай 2015</p>
 <a href="https://plus.google.com/109229859109198130360" rel="publisher">Google+</a>
+<a href="http://www.djangoproject.com/"><img src="https://www.djangoproject.com/m/img/badges/djangomade124x25.gif" border="0" alt="Made with Django." title="Made with Django." /></a>
 </footer>
 </div>
 </body>
