--- a/phystech/templates/index.html
+++ b/phystech/templates/index.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="jumbotron">
-    <h1>Добро пожаловать</h1>
-    <p>Морской бой по-физтеховски!</p>
-    <p><a class="btn btn-primary btn-large" href="index.php?page=rules">Прочесть правила&raquo;</a></p>
+    <h1>Морской бой по-физтеховски</h1>
 </div>
 <div class="row">
 <div class="col-md-12 panel panel-default">
