--- a/phystech/templates/index.html
+++ b/phystech/templates/index.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="jumbotron">
-    <h1>Морской бой по-физтеховски</h1>
 </div>
+<div class="window center-block">
+    <img src="/static/logo_bg.png" class="center-block logo" >
+    <h1 class="text-center moto">Морской бой по-физтеховски</h1>
+</div>
+<div class="container">
 <div class="row">
 <div class="col-md-12 panel panel-default">
 <div class="panel-body">
