--- a/phystech/templates/base.html
+++ b/phystech/templates/base.html
@@ -57,8 +57,10 @@ body {
     margin-right: 0px;
 }
     </style>
+    {% block head %}{% endblock %}
 </head>
 <body>
+{% block body %}
 <div class="navbar navbar-default">
     <div class="container-fluid">
     <a class="navbar-brand" href="/">Морской бой по-физтеховски</a>
@@ -112,5 +114,6 @@ body {
 <div class="container">
     {% block content %}{% endblock %}
 </div>
+{% endblock %}
 </body>
 </html>
