add better palettes

--- a/phystech/templates/base.html
+++ b/phystech/templates/base.html
@@ -12,7 +12,7 @@
     <link href='http://fonts.googleapis.com/css?family=Neucha&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     {% bootstrap_css %}
     {% bootstrap_javascript jquery=1 %}
-    <link href='/static/magic-bootstrap.css' rel='stylesheet' type='text/css'>
+    <link href='/static/magic-bootstrap-min.css' rel='stylesheet' type='text/css'>
     <style>
 .row-eq-height {
     height: 400px;
@@ -25,10 +25,6 @@
 .navbar {
     font-family: 'Neucha';
     font-weight: bolder;
-}
-
-body {
-    background: #e9e9ff;
 }
 
 .window {
