--- a/src/Log.css
+++ b/src/Log.css
@@ -1,15 +1,15 @@
 /* Log component styles */
 .log-container {
   position: relative;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 }
 
 .log-scroll-container {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   padding: 0;
   margin: 0;
   min-height: 0;
