--- a/src/Log.css
+++ b/src/Log.css
@@ -25,7 +25,7 @@
   margin: 2px 0;
   cursor: pointer;
   transition: all 0.03s ease;
-  font-size: 0.875rem;
+  font-size: clamp(0.3rem, 1.7vh, 1.5rem);
   color: var(--text-primary);
   line-height: 1.4;
   display: flex;
