--- a/src/Board.css
+++ b/src/Board.css
@@ -90,6 +90,7 @@
   user-select: none;
   /* Improve touch responsiveness */
   touch-action: none;
+  outline: none !important;
 }
 
 .board-cell-placement-zone {
